sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	while( E == true) {
		for(i <- 0 to getNombreValeurs - 1) {
			var E:Boolean = false
			if(plusPetit(i + 1 , i)){
				echange(i, i + 1)
				E = true
			}
		}
	}
}
